--- a/northern_va_housing_analysis.ipynb
+++ b/northern_va_housing_analysis.ipynb
@@ -92,9 +92,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✓ Loaded 48 HPI observations\n",
-      "✓ ZIP codes: [np.int64(20170), np.int64(20171), np.int64(20190), np.int64(20191), np.int64(20194), np.int64(22201), np.int64(22202), np.int64(22203), np.int64(22204), np.int64(22205), np.int64(22206), np.int64(22207), np.int64(22209), np.int64(22213)]\n",
-      "✓ Years: [np.int64(2021), np.int64(2022), np.int64(2023), np.int64(2024)]\n"
+      " Loaded 48 HPI observations\n",
+      " ZIP codes: [np.int64(20170), np.int64(20171), np.int64(20190), np.int64(20191), np.int64(20194), np.int64(22201), np.int64(22202), np.int64(22203), np.int64(22204), np.int64(22205), np.int64(22206), np.int64(22207), np.int64(22209), np.int64(22213)]\n",
+      " Years: [np.int64(2021), np.int64(2022), np.int64(2023), np.int64(2024)]\n"
      ]
     },
     {
@@ -312,9 +312,9 @@
     "hpi_data['ln_HPI'] = np.log(hpi_data['HPI'])\n",
     "hpi_data['Entity'] = hpi_data['Five-Digit ZIP Code'].astype(str) + '_' + hpi_data['Location']\n",
     "\n",
-    "print(f\"✓ Loaded {len(hpi_data)} HPI observations\")\n",
-    "print(f\"✓ ZIP codes: {sorted(hpi_data['Five-Digit ZIP Code'].unique())}\")\n",
-    "print(f\"✓ Years: {sorted(hpi_data['Year'].unique())}\")\n",
+    "print(f\" Loaded {len(hpi_data)} HPI observations\")\n",
+    "print(f\" ZIP codes: {sorted(hpi_data['Five-Digit ZIP Code'].unique())}\")\n",
+    "print(f\" Years: {sorted(hpi_data['Year'].unique())}\")\n",
     "\n",
     "# Display first few rows\n",
     "hpi_data.head(10)"
@@ -345,8 +345,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✓ Loaded FEDFUNDS data from: FEDFUNDS.csv\n",
-      "✓ Annual interest rate observations: 4\n"
+      " Loaded FEDFUNDS data from: FEDFUNDS.csv\n",
+      " Annual interest rate observations: 4\n"
      ]
     },
     {
@@ -440,8 +440,8 @@
     "    .rename(columns={rate_col: 'InterestRate'})\n",
     ")\n",
     "\n",
-    "print(f\"✓ Loaded FEDFUNDS data from: {fedfunds_path}\")\n",
-    "print(f\"✓ Annual interest rate observations: {len(annual_interest_rates)}\")\n",
+    "print(f\" Loaded FEDFUNDS data from: {fedfunds_path}\")\n",
+    "print(f\" Annual interest rate observations: {len(annual_interest_rates)}\")\n",
     "annual_interest_rates.head(10)"
    ]
   },
@@ -585,10 +585,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✓ Loaded employment data from: income_100k_plus.csv\n",
-      "✓ Loaded employment data: 954,196 rows\n",
-      "✓ Columns: ['YEAR', 'SAMPLE', 'SERIAL', 'CBSERIAL', 'HHWT', 'CLUSTER', 'STRATA', 'GQ', 'PERNUM', 'PERWT', 'INCWAGE', 'PWCOUNTY']\n",
-      "✓ High-wage workers (≥$100k): 954,196\n"
+      " Loaded employment data from: income_100k_plus.csv\n",
+      " Loaded employment data: 954,196 rows\n",
+      " Columns: ['YEAR', 'SAMPLE', 'SERIAL', 'CBSERIAL', 'HHWT', 'CLUSTER', 'STRATA', 'GQ', 'PERNUM', 'PERWT', 'INCWAGE', 'PWCOUNTY']\n",
+      " High-wage workers (≥$100k): 954,196\n"
      ]
     },
     {
@@ -596,8 +596,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "✓ Processed employment data: 8 location-years\n",
-      "✓ Employment source check (rows by year):\n",
+      " Processed employment data: 8 location-years\n",
+      " Employment source check (rows by year):\n",
       "YEAR\n",
       "2021    10239\n",
       "2022    10849\n",
@@ -774,13 +774,13 @@
     "\n",
     "emp_raw = pd.read_csv(employment_path)\n",
     "\n",
-    "print(f\"✓ Loaded employment data from: {employment_path}\")\n",
-    "print(f\"✓ Loaded employment data: {len(emp_raw):,} rows\")\n",
-    "print(f\"✓ Columns: {emp_raw.columns.tolist()}\")\n",
+    "print(f\" Loaded employment data from: {employment_path}\")\n",
+    "print(f\" Loaded employment data: {len(emp_raw):,} rows\")\n",
+    "print(f\" Columns: {emp_raw.columns.tolist()}\")\n",
     "\n",
     "# Filter for high-wage workers (>= $100k)\n",
     "emp_raw = emp_raw[emp_raw['INCWAGE'] >= 100000]\n",
-    "print(f\"✓ High-wage workers (≥$100k): {len(emp_raw):,}\")\n",
+    "print(f\" High-wage workers (≥$100k): {len(emp_raw):,}\")\n",
     "\n",
     "# Map county codes to harmonized location labels\n",
     "def map_county(county_code):\n",
@@ -809,8 +809,8 @@
     "employment_data['ln_HighPayJobs'] = np.log(employment_data['HighPayJobs'])\n",
     "employment_data['Quarter'] = employment_data['Year'].astype(str) + 'Q4'\n",
     "\n",
-    "print(f\"\\n✓ Processed employment data: {len(employment_data)} location-years\")\n",
-    "print(\"✓ Employment source check (rows by year):\")\n",
+    "print(f\"\\n Processed employment data: {len(employment_data)} location-years\")\n",
+    "print(\" Employment source check (rows by year):\")\n",
     "print(emp_raw.groupby('YEAR').size().sort_index())\n",
     "\n",
     "# Display employment data\n",
@@ -2461,27 +2461,27 @@
       "KEY FINDINGS\n",
       "================================================================================\n",
       "\n",
-      "📊 HIGH-WAGE EMPLOYMENT ELASTICITY (β₁):\n",
+      " HIGH-WAGE EMPLOYMENT ELASTICITY (β₁):\n",
       "   Coefficient: -1.6417\n",
       "   Std Error:   0.5568\n",
       "   p-value:     0.0090\n",
       "\n",
-      "   💡 INTERPRETATION:\n",
+      "    INTERPRETATION:\n",
       "   A 1% increase in high-wage jobs is associated with\n",
       "   a -1.6417% change in housing prices.\n",
       "\n",
       "   A 10% increase in high-wage jobs → -16.42% price increase\n",
       "\n",
-      "   ✓ Highly statistically significant (p < 0.01)\n",
+      "    Highly statistically significant (p < 0.01)\n",
       "\n",
-      "📊 BUILDING PERMITS EFFECT (β₂):\n",
+      " BUILDING PERMITS EFFECT (β₂):\n",
       "   Coefficient: -1.8115\n",
       "   p-value:     0.0003\n",
       "\n",
-      "📊 MODEL FIT:\n",
+      " MODEL FIT:\n",
       "   R-squared:     0.9956 (99.6% of variance explained)\n",
       "   Adj R-squared: 0.9915\n",
-      "   ✓ Excellent model fit\n",
+      "    Excellent model fit\n",
       "\n",
       "================================================================================\n"
      ]
@@ -2498,23 +2498,23 @@
     "print(\"KEY FINDINGS\")\n",
     "print(\"=\" * 80)\n",
     "\n",
-    "print(f\"\\n📊 HIGH-WAGE EMPLOYMENT ELASTICITY (β₁):\")\n",
+    "print(f\"\\n HIGH-WAGE EMPLOYMENT ELASTICITY (β₁):\")\n",
     "print(f\"   Coefficient: {beta_employment:.4f}\")\n",
     "print(f\"   Std Error:   {se_employment:.4f}\")\n",
     "print(f\"   p-value:     {p_employment:.4f}\")\n",
-    "print(f\"\\n   💡 INTERPRETATION:\")\n",
+    "print(f\"\\n    INTERPRETATION:\")\n",
     "print(f\"   A 1% increase in high-wage jobs is associated with\")\n",
     "print(f\"   a {beta_employment:.4f}% change in housing prices.\")\n",
     "print(f\"\\n   A 10% increase in high-wage jobs → {beta_employment*10:.2f}% price increase\")\n",
     "\n",
     "if p_employment < 0.01:\n",
-    "    print(f\"\\n   ✓ Highly statistically significant (p < 0.01)\")\n",
+    "    print(f\"\\n    Highly statistically significant (p < 0.01)\")\n",
     "elif p_employment < 0.05:\n",
-    "    print(f\"\\n   ✓ Statistically significant (p < 0.05)\")\n",
+    "    print(f\"\\n    Statistically significant (p < 0.05)\")\n",
     "elif p_employment < 0.10:\n",
-    "    print(f\"\\n   ✓ Marginally significant (p < 0.10)\")\n",
+    "    print(f\"\\n    Marginally significant (p < 0.10)\")\n",
     "else:\n",
-    "    print(f\"\\n   ✗ Not statistically significant\")\n",
+    "    print(f\"\\n    Not statistically significant\")\n",
     "\n",
     "if len(beta) > 2:  # If supply variable included\n",
     "    supply_idx = 2\n",
@@ -2527,22 +2527,22 @@
     "        t_interest = t_stats[3]\n",
     "        p_interest = p_values[3]\n",
     "\n",
-    "    print(f\"\\n📊 BUILDING PERMITS EFFECT (β₂):\")\n",
+    "    print(f\"\\n BUILDING PERMITS EFFECT (β₂):\")\n",
     "    print(f\"   Coefficient: {beta_supply:.4f}\")\n",
     "    print(f\"   p-value:     {p_supply:.4f}\")\n",
     "    if p_supply > 0.10:\n",
     "        print(f\"   Note: Not statistically significant (state-level data limitation)\")\n",
     "\n",
-    "print(f\"\\n📊 MODEL FIT:\")\n",
+    "print(f\"\\n MODEL FIT:\")\n",
     "print(f\"   R-squared:     {r_squared:.4f} ({r_squared*100:.1f}% of variance explained)\")\n",
     "print(f\"   Adj R-squared: {adj_r_squared:.4f}\")\n",
     "\n",
     "if r_squared > 0.85:\n",
-    "    print(f\"   ✓ Excellent model fit\")\n",
+    "    print(f\"    Excellent model fit\")\n",
     "elif r_squared > 0.70:\n",
-    "    print(f\"   ✓ Good model fit\")\n",
+    "    print(f\"    Good model fit\")\n",
     "else:\n",
-    "    print(f\"   ⚠ Moderate model fit\")\n",
+    "    print(f\"    Moderate model fit\")\n",
     "\n",
     "print(\"\\n\" + \"=\" * 80)"
    ]
@@ -2656,8 +2656,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✓ Saved: panel_data_output.csv\n",
-      "✓ Saved: regression_results.csv\n",
+      " Saved: panel_data_output.csv\n",
+      " Saved: regression_results.csv\n",
       "\n",
       "Top 10 coefficients:\n"
      ]
@@ -2809,7 +2809,7 @@
    "source": [
     "# Save panel data\n",
     "panel_complete.to_csv('panel_data_output.csv', index=False)\n",
-    "print(\"✓ Saved: panel_data_output.csv\")\n",
+    "print(\" Saved: panel_data_output.csv\")\n",
     "\n",
     "# Create regression results DataFrame\n",
     "results_df = pd.DataFrame({\n",
@@ -2821,7 +2821,7 @@
     "})\n",
     "\n",
     "results_df.to_csv('regression_results.csv', index=False)\n",
-    "print(\"✓ Saved: regression_results.csv\")\n",
+    "print(\" Saved: regression_results.csv\")\n",
     "\n",
     "# Display results\n",
     "print(\"\\nTop 10 coefficients:\")\n",
@@ -2857,15 +2857,15 @@
       "ANALYSIS SUMMARY\n",
       "================================================================================\n",
       "\n",
-      "📍 STUDY AREAS:\n",
+      " STUDY AREAS:\n",
       "   • Arlington County (Amazon HQ2, defense contractors)\n",
       "   • Herndon City (tech companies; employment proxy via Fairfax County)\n",
       "\n",
-      "📅 STUDY PERIOD:\n",
+      " STUDY PERIOD:\n",
       "   • January 2021 - December 2024\n",
       "   • 4 years, 14 ZIP codes, 34 observations\n",
       "\n",
-      "🔑 KEY FINDINGS:\n",
+      " KEY FINDINGS:\n",
       "   • Employment Elasticity (β₁): -1.6417\n",
       "   • 1% ↑ in high-wage jobs -> -1.64% change in house prices\n",
       "   • Employment p-value: 0.0090\n",
@@ -2874,23 +2874,23 @@
       "   • Interest-rate p-value: 0.0042\n",
       "   • 2021-2024 +5 pp Fed tightening -> predicted 0.33% price effect\n",
       "\n",
-      "📊 MODEL PERFORMANCE:\n",
+      " MODEL PERFORMANCE:\n",
       "   • R² = 0.9956 (explains 99.6% of variation)\n",
       "   • Adjusted R² = 0.9915\n",
       "\n",
-      "💡 IMPLICATIONS:\n",
+      " IMPLICATIONS:\n",
       "   1. Employment, supply, and monetary policy should be interpreted together\n",
       "   2. Interest-rate sensitivity is now explicitly controlled in the model\n",
       "   3. Housing affordability policy should account for both labor demand and rates\n",
       "\n",
-      "⚠️  LIMITATIONS:\n",
+      "️  LIMITATIONS:\n",
       "   • Permit proxy is household-weighted from statewide totals\n",
       "   • Cannot distinguish local residents vs. commuters\n",
       "   • Short 4-year window\n",
       "   • Interest-rate variation is national, not local\n",
       "\n",
       "================================================================================\n",
-      "✓ ANALYSIS COMPLETE\n",
+      " ANALYSIS COMPLETE\n",
       "================================================================================\n"
      ]
     }
@@ -2903,15 +2903,15 @@
     "feature_names = ['const'] + list(X_clean.columns)\n",
     "interest_idx = feature_names.index('InterestRate') if 'InterestRate' in feature_names else None\n",
     "\n",
-    "print(f\"\\n📍 STUDY AREAS:\")\n",
+    "print(f\"\\n STUDY AREAS:\")\n",
     "print(f\"   • Arlington County (Amazon HQ2, defense contractors)\")\n",
     "print(f\"   • Herndon City (tech companies; employment proxy via Fairfax County)\")\n",
     "\n",
-    "print(f\"\\n📅 STUDY PERIOD:\")\n",
+    "print(f\"\\n STUDY PERIOD:\")\n",
     "print(f\"   • January 2021 - December 2024\")\n",
     "print(f\"   • 4 years, 14 ZIP codes, {n} observations\")\n",
     "\n",
-    "print(f\"\\n🔑 KEY FINDINGS:\")\n",
+    "print(f\"\\n KEY FINDINGS:\")\n",
     "print(f\"   • Employment Elasticity (β₁): {beta_employment:.4f}\")\n",
     "print(f\"   • 1% ↑ in high-wage jobs -> {beta_employment:.2f}% change in house prices\")\n",
     "print(f\"   • Employment p-value: {p_employment:.4f}\")\n",
@@ -2924,23 +2924,23 @@
     "    print(f\"   • Interest-rate p-value: {p_interest:.4f}\")\n",
     "    print(f\"   • 2021-2024 +5 pp Fed tightening -> predicted {beta_interest*5:.2f}% price effect\")\n",
     "\n",
-    "print(f\"\\n📊 MODEL PERFORMANCE:\")\n",
+    "print(f\"\\n MODEL PERFORMANCE:\")\n",
     "print(f\"   • R² = {r_squared:.4f} (explains {r_squared*100:.1f}% of variation)\")\n",
     "print(f\"   • Adjusted R² = {adj_r_squared:.4f}\")\n",
     "\n",
-    "print(f\"\\n💡 IMPLICATIONS:\")\n",
+    "print(f\"\\n IMPLICATIONS:\")\n",
     "print(f\"   1. Employment, supply, and monetary policy should be interpreted together\")\n",
     "print(f\"   2. Interest-rate sensitivity is now explicitly controlled in the model\")\n",
     "print(f\"   3. Housing affordability policy should account for both labor demand and rates\")\n",
     "\n",
-    "print(f\"\\n⚠️  LIMITATIONS:\")\n",
+    "print(f\"\\n️  LIMITATIONS:\")\n",
     "print(f\"   • Permit proxy is household-weighted from statewide totals\")\n",
     "print(f\"   • Cannot distinguish local residents vs. commuters\")\n",
     "print(f\"   • Short 4-year window\")\n",
     "print(f\"   • Interest-rate variation is national, not local\")\n",
     "\n",
     "print(f\"\\n\" + \"=\" * 80)\n",
-    "print(\"✓ ANALYSIS COMPLETE\")\n",
+    "print(\" ANALYSIS COMPLETE\")\n",
     "print(\"=\" * 80)"
    ]
   },
@@ -2954,9 +2954,9 @@
     "\n",
     "## Next Steps\n",
     "\n",
-    "1. **📊 Robustness Checks:** Test alternative specifications and time periods\n",
-    "2. **📝 Write Paper:** Use results for research publication\n",
-    "3. **🎯 Policy Brief:** Create recommendations for local government\n",
+    "1. ** Robustness Checks:** Test alternative specifications and time periods\n",
+    "2. ** Write Paper:** Use results for research publication\n",
+    "3. ** Policy Brief:** Create recommendations for local government\n",
     "\n",
     "---\n",
     "\n",
